--- a/github1/css/style.css
+++ b/github1/css/style.css
@@ -487,7 +487,7 @@ text-align:center;
 padding:5px;
 position:fixed;
 bottom:10px; /* отступ кнопки от нижнего края страницы*/
-right:20px;
+margin-left: 40%;
 cursor:pointer;
 display:none;
 color:#AD311B;
