--- a/github1/css/style.css
+++ b/github1/css/style.css
@@ -470,6 +470,16 @@ input[type='submit']{
 .burger{
 	display: none;
 }
+.arrow{
+	width: 50px;
+	height: 50px;
+	background: url('../img/arrow.png');
+	position: fixed;
+	top:20%;
+	left: -2%;
+	opacity: .5;
+	cursor: pointer;
+}
 
 
 /*Кнопка вверх*/
@@ -487,7 +497,7 @@ text-align:center;
 padding:5px;
 position:fixed;
 bottom:10px; /* отступ кнопки от нижнего края страницы*/
-margin-left: 40%;
+right: 20px;
 cursor:pointer;
 display:none;
 color:#AD311B;
@@ -627,6 +637,13 @@ z-index: 200;
 		margin-left: 20%;
 		width: 60%;
 	}
+	.social-left{
+		top:9%;
+		position: fixed;
+	}
+	#toTop{
+		right: 37%;
+	}
 	
 }
 
@@ -636,6 +653,13 @@ z-index: 200;
 	}
 	.social-left{
 		top:10%;
+		position: fixed;
+		transform: translateX(-50px);
+		transition: 1s;
+	}
+	.social-right{
+		transform: translateX(0px);
+		transition: 1s;
 	}
 	h1{
 		font-size: 22px;
