--- a/github1/css/style.css
+++ b/github1/css/style.css
@@ -475,7 +475,7 @@ input[type='submit']{
 	height: 50px;
 	background: url('../img/arrow.png');
 	position: fixed;
-	top:43%;
+	top:43vh;
 	left: -1%;
 	opacity: .5;
 	cursor: pointer;
@@ -487,7 +487,7 @@ input[type='submit']{
 	height: 50px;
 	background: url('../img/arrow-back.png');
 	position: fixed;
-	top:43%;
+	top:43vh;
 	left: -1%;
 	opacity: .5;
 	cursor: pointer;
