--- a/Github/style.css
+++ b/Github/style.css
@@ -146,6 +146,7 @@ main .main_about{
 }
 .team_cards{
 	display: flex;
+	justify-content: center;
 }
 .card{
 	margin:0 40px;
@@ -227,7 +228,7 @@ main .main_about{
 }
 .main_clients{
 	background: #000;
-	padding: 100px 0 205px 0;
+	padding: 100px 0 100px 0;
 	color: #fff;
 	text-align:center;
 }
