--- a/visitka_workzilla/style.css
+++ b/visitka_workzilla/style.css
@@ -101,7 +101,7 @@ body{
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: rgba(255,255,255,0.3) url('img/4-fingers-png-2-min.png') no-repeat 30px 0;
+    background: rgba(255,255,255,0.3) url('img/mod/kulak.png') no-repeat 20px 15px;
     background-size:contain;
     display: flex;
     justify-content: center;
@@ -112,10 +112,34 @@ body{
     color:#fff;
 }
 .box_img_mod{
-    background: rgba(255,255,255,0.3) url('img/hands_PNG928-min.png') no-repeat 25px 0;
+    background: rgba(255,255,255,0.3) url('img/mod/one.png') no-repeat 15px 15px;
     background-size:contain;
 }
-.box_img_2{
+.box_img_mod_1{
+    background: rgba(255,255,255,0.3) url('img/mod/two.png') no-repeat 15px 5px;
+    background-size:contain;
+}
+.box_img_mod_2{
+    background: rgba(255,255,255,0.3) url('img/mod/three.png') no-repeat 15px 5px;
+    background-size:contain;
+}
+.box_img_mod_3{
+    background: rgba(255,255,255,0.3) url('img/mod/for.png') no-repeat 20px 5px;
+    background-size:contain;
+}
+.box_img_mod_4{
+    background: rgba(255,255,255,0.3) url('img/mod/five.png') no-repeat 15px 5px;
+    background-size:contain; 
+}
+.box_img_mod_5{
+    background: rgba(255,255,255,0.3) url('img/mod/ok2.png') no-repeat 15px 5px;
+    background-size:contain; 
+}
+.box_img_mod_6{
+    background: rgba(255,255,255,0.3) url('img/mod/front.png') no-repeat 0px 20px;
+    background-size:contain; 
+}
+/* .box_img_2{
     margin-top: 10px;
 }
 .box_img_3{
@@ -129,4 +153,4 @@ body{
 }
 .box_img_6{
     margin-top: 10px;
-}
+} */
