--- a/visitka_workzilla/style.css
+++ b/visitka_workzilla/style.css
@@ -9,7 +9,7 @@ html{
     height: 100%;
 }
 body{
-    background: url('img/house.png') no-repeat;
+    background: url('img/mod/house1.png') no-repeat;
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -21,7 +21,6 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 0 0 20px 0;
     background: rgba(0,0,0,0.4);
 }
 .head_logo{
@@ -29,15 +28,16 @@ body{
     text-align: center;
     font-size: 30px;
     padding: 20px;
-    background: rgba(255,255,255,0.5);
+    background: rgba(255,255,255,0.4);
 }
 .contacts{
     display: flex;
-    width: 90%;
-    margin:0 auto;  
+    width: 100%;
+    padding: 10px;  
     font-size: 36px;
-    color:#fff;
+    color:#222;
     justify-content: space-between;
+    background: rgba(255,255,255,0.4);
 }
 .main_text{
     width: 100%;
@@ -64,7 +64,7 @@ body{
 }   
 .container-text{
     border-radius: 50%;
-    border:3px solid lightblue;
+    border:3px solid rgba(173,216,230,0.1);
     min-height: 200px;
     max-width: 200px;
     min-width: 200px;
@@ -86,8 +86,7 @@ body{
 .main_text_left_box, .main_text_right_box{
     min-height: 80px;
     width: 100%;
-    
-    border:3px solid lightblue;
+    border:3px solid rgba(173,216,230,0.1);
     border-radius: 5px;
     padding: 5px;
 }
@@ -101,8 +100,8 @@ body{
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: rgba(255,255,255,0.3) url('img/mod/kulak.png') no-repeat 20px 15px;
-    background-size:contain;
+    background: rgba(255,255,255,0.3) url('img/mod/kulak.png') no-repeat 25px 25px;
+    background-size:55%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -131,14 +130,14 @@ body{
     background: rgba(255,255,255,0.3) url('img/mod/five.png') no-repeat 15px 5px;
     background-size:contain; 
 }
-.box_img_mod_5{
+/* .box_img_mod_5{
     background: rgba(255,255,255,0.3) url('img/mod/ok2.png') no-repeat 15px 5px;
     background-size:contain; 
-}
-.box_img_mod_6{
+} */
+/* .box_img_mod_6{
     background: rgba(255,255,255,0.3) url('img/mod/front.png') no-repeat 0px 20px;
     background-size:contain; 
-}
+} */
 /* .box_img_2{
     margin-top: 10px;
 }
@@ -154,3 +153,6 @@ body{
 .box_img_6{
     margin-top: 10px;
 } */
+#hunter-call .lt-xbutton-main-wrapper{
+    right: 20px !important;
+}
