--- a/visitka_workzilla/media.css
+++ b/visitka_workzilla/media.css
@@ -1,3 +1,37 @@
 @media (max-width:768px) {
+    .logo{
+        display: none;
+    }
+    .wrap{
+        height: 110%;
+    }
+}
+@media (max-width:512px) {
+    .email{
+        display: none;
+    }
+    .contacts{
+        justify-content: center;
+    }
+    .box_img{
+        width: 50px;
+        height: 50px;
+        background-position: 10px 15px;
+    }
+    .container-text{
+    min-height: 100px;
+    min-width: 100px;
+    max-width: 100px;
+    border:none;
+    }
+    .container-text-wrap{
+        display: none;
+    }
+    .main_text_left, .main_text_right{
+        width: 95%;
+        text-align: center;
+    }
+}
+@media (max-width:360px){
     
 }
