--- a/visitka_workzilla/style.css
+++ b/visitka_workzilla/style.css
@@ -9,19 +9,18 @@ html{
     height: 100%;
 }
 body{
-    background: url('img/mod/house1.png') no-repeat;
-    background-size: cover;
     width: 100%;
     height: 100%;
     font-family: calibri;
 }
 .wrap{
-    width: 100%;
+    background: url('img/mod/house1.png') no-repeat;
+    background-size: cover;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: rgba(0,0,0,0.4);
+    /* background: rgba(0,0,0,0.4); */
 }
 .head_logo{
     color:#444;
@@ -111,7 +110,7 @@ body{
     color:#fff;
 }
 .box_img_mod{
-    background: rgba(255,255,255,0.3) url('img/mod/one.png') no-repeat 15px 15px;
+    background: rgba(255,255,255,0.3) url('img/mod/one.png') no-repeat 15px 10px;
     background-size:contain;
 }
 .box_img_mod_1{
