--- a/visitka_workzilla/media.css
+++ b/visitka_workzilla/media.css
@@ -17,6 +17,7 @@
         width: 50px;
         height: 50px;
         background-position: 10px 15px;
+        text-align: center;
     }
     .container-text{
     min-height: 100px;
